--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "dotenv-expand": "^5.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "fs-extra": "^8.0.1",
@@ -41,10 +43,13 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "^7.0.1",
+    "prettier": "^1.18.2",
+    "promise": "^8.0.3",
     "react": "^16.8.6",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
-    "react-router": "^5.0.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "resolve": "^1.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -53,6 +58,7 @@
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-manifest-plugin": "^2.0.4",
+    "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "babel": {
