--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.5.1",
+    "antd": "^3.20.7",
+    "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^9.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "css-loader": "^2.1.1",
@@ -35,6 +37,7 @@
     "file-loader": "^3.0.1",
     "fs-extra": "^8.0.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "install": "^0.13.0",
     "is-wsl": "^2.0.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.6.0",
@@ -67,7 +70,7 @@
     ]
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.7.2"
   },
   "browserslist": {
     "production": [
