--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config config/webpack.config.dev.js"
   },
   "dependencies": {
     "@babel/cli": "^7.4.4",
@@ -17,12 +18,14 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "antd": "^3.20.7",
+    "antd-mobile": "^2.3.1",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^9.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^5.1.0",
@@ -36,10 +39,14 @@
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "fs-extra": "^8.0.1",
+    "history": "^4.9.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "install": "^0.13.0",
     "is-wsl": "^2.0.0",
     "json-loader": "^0.5.7",
+    "json-server": "^0.15.1",
+    "lib-flexible": "^0.3.2",
+    "loadsh": "^0.0.4",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -51,9 +58,17 @@
     "react": "^16.8.6",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-sumail-snake": "^1.1.0",
+    "react-transition-group": "^4.2.2",
+    "react-virtualized": "^9.21.1",
+    "redux": "^4.0.4",
+    "redux-observable": "^1.1.0",
     "resolve": "^1.11.0",
+    "rxjs": "^6.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.4",
@@ -70,6 +85,8 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.12.1",
+    "px2rem-loader": "^0.1.9",
     "webpack-dev-server": "^3.7.2"
   },
   "browserslist": {
